# cg-v2

./: .gitignore  CMakeLists.txt  main.cpp
reference/: CMakeLists.txt
reference/include/: Simulation.hpp
reference/include/core/: Context.hpp  Geometry.hpp  Parameters.hpp  System.hpp
reference/include/data/: Contacts.hpp  LocalStructure.hpp  ModelData.hpp  NativeStructure.hpp  Primitives.hpp  PseudoAtoms.hpp  Results.hpp  SharedData.hpp  System.hpp  Topology.hpp
reference/include/forces/: Force.hpp
reference/include/forces/local/: Chirality.hpp  ComplexNativeDihedral.hpp  HarmonicTethers.hpp  HeuresticBondAngle.hpp  HeuresticDihedralAngle.hpp  LocalRepulsive.hpp  NativeBond.hpp  NativeBondAngle.hpp  SimpleNativeDihedral.hpp  TabulatedBondAngle.hpp  TabulatedDihedralAngle.hpp
reference/include/forces/nonlocal/: DebyeHueckel.hpp  NativeContacts.hpp  NeighborsCounter.hpp  PauliExclusion.hpp  PseudoImproperDihedral.hpp  QuasiAdiabatic.hpp
reference/include/forces/wall/: LJWall.hpp  LJ_VAFM.hpp
reference/include/geometry/: Geometry.hpp  PDBFile.hpp
reference/include/integrators/: Integrator.hpp  LangevinPredictorCorrector.hpp  PredictorCorrector.hpp
reference/include/loaders/: ContactFile.hpp  ContactMapFile.hpp  PDBFile.hpp  ParameterFile.hpp  SequenceFile.hpp
reference/include/math/: Types.hpp  Units.hpp  Vector.hpp
reference/include/model/: Chain.hpp  FullModel.hpp  Model.hpp  NativeStructure.hpp
reference/include/reporters/: ContactsDiffReporter.hpp  PositionDiffReporter.hpp  Reporter.hpp  StateReporter.hpp
reference/include/utils/: AminoAcid.hpp  Angles.hpp  ResidueName.hpp  Types.hpp  Units.hpp
reference/src/: Simulation.cpp
reference/src/core/: Geometry.cpp  Neighborhoods.cpp  Parameters.cpp
reference/src/data/: ModelData.cpp  PseudoAtoms.cpp  Results.cpp  Topology.cpp
reference/src/forces/local/: Chirality.cpp  ComplexNativeDihedral.cpp  HarmonicTethers.cpp  LocalRepulsive.cpp  NativeBond.cpp  NativeBondAngle.cpp  SimpleNativeDihedral.cpp
reference/src/forces/nonlocal/: NativeContacts.cpp  NeighborsCounter.cpp  PauliExclusion.cpp  PseudoImproperDihedral.cpp  QuasiAdiabatic.cpp
reference/src/forces/wall/: LJWall.cpp  LJ_VAFM.cpp
reference/src/geometry/: PDBFile.cpp
reference/src/integrators/: LangevinPredictorCorrector.cpp
reference/src/loaders/: ContactFile.cpp  ContactMapFile.cpp  PDBFile.cpp  ParameterFile.cpp  SequenceFile.cpp
reference/src/model/: Chain.cpp  FullModel.cpp  Model.cpp
reference/src/reporters/: ContactsDiffReporter.cpp  PositionDiffReporter.cpp  StateReporter.cpp
reference/src/utils/: AminoAcid.cpp  ResidueName.cpp
sandbox/: CMakeLists.txt  (+2 more)
toolkit/: CMakeLists.txt
toolkit/include/data/: Parameters.hpp
toolkit/include/loaders/: ContactMapFile.hpp  PDBFile.hpp  ParameterFile.hpp  SequenceFile.hpp
toolkit/include/model/: Chain.hpp  FullModel.hpp  Model.hpp  NativeStructure.hpp
toolkit/include/utils/: AminoAcid.hpp  Angles.hpp  RNG.hpp  TupleHash.hpp  Types.hpp  Units.hpp
toolkit/src/data/: Parameters.cpp
toolkit/src/loaders/: ContactMapFile.cpp  PDBFile.cpp  ParameterFile.cpp  SequenceFile.cpp
toolkit/src/model/: Chain.cpp  FullModel.cpp  Model.cpp
toolkit/src/utils/: AminoAcid.cpp  RNG.cpp
(+25 files in other folders)
